# OpenGL-GE

./: CMakeLists.txt
nanobind/: concept_forge.cpp
python-scripts/: concept_forge.pyi  imgui.ini  test.py  test2.py  test3.py  test4.py
src/: constants.hpp  setup.cpp  setup.hpp
src/editor/: gizmo.cpp  gui.cpp
src/primitives/: entity.cpp  entity.hpp  uv_sphere.cpp  uv_sphere.hpp
